--- a/homework_05/templates/base.html
+++ b/homework_05/templates/base.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 {% for endpoint, label in [
                   ('index_page', 'Главная'),
-                  ('about_app.about', 'About'),
+                  ('about_app.about', 'Сведения'),
                   ] %}
                     {% set path = url_for(endpoint) %}
                     <li class="nav-item">
